--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,11 @@
 {
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.1.4",
     "express": "^5.2.1",
-    "nodemon": "^3.1.11",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "cors": "^2.8.5",
+    "dotenv": "^16.1.4"
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "check-env": "node scripts/check-env.js"
+    "dev": "nodemon server.js"
   }
 }
