Configure frontend to use live backend URL

--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -2,3 +2,4 @@ NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=YOUR_TEST_GOOGLE_MAPS_API_KEY
 JWT_SECRET=test-secret-for-build
 USE_DATABASE=false
 STATIC_DATASET_PASSWORD=open123
+NEXT_PUBLIC_API_URL=https://eforestbackendserver.onrender.com
